--- a/admin/package.json
+++ b/admin/package.json
@@ -28,11 +28,13 @@
     "@x1mrdonut1x/nouislider-react": "^3.4.3",
     "apexcharts": "^3.53.0",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "easymde": "^2.18.0",
     "firebase": "^10.13.2",
     "formik": "^2.4.6",
     "jest": "^29.7.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.445.0",
     "mantine-datatable": "^7.12.4",
@@ -48,7 +50,7 @@
     "react-dom": "^18.3.1",
     "react-export-table-to-excel": "^1.0.6",
     "react-flatpickr": "^3.10.13",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.5.0",
     "react-images-uploading": "^3.1.7",
     "react-input-mask": "^2.0.4",
     "react-popper": "^2.3.0",
@@ -93,6 +95,6 @@
     "vite": "^5.4.7"
   },
   "engines": {
-     "node": ">=18.x"
-   }
+    "node": ">=18.x"
+  }
 }
