--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.7",
     "firebase": "^10.13.2",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.445.0",
     "npm-check-updates": "^17.1.2",
     "prop-types": "^15.8.1",
