Updated project with new changes

--- a/node-express-server/.env
+++ b/node-express-server/.env
@@ -2,7 +2,7 @@
 PORT=3000
 
 # Client URL
-CLIENT_URL=http://localhost:5173
+CLIENT_URL=http://localhost:5174
 
 # Server URL
 SERVER_URL=http://localhost:3000
@@ -22,13 +22,13 @@ JWT_RESET_PASSWORD_EXPIRATION_MINUTES=10
 # Number of minutes after which a verify email token expires
 JWT_VERIFY_EMAIL_EXPIRATION_MINUTES=10
 
-# SMTP configuration options for the email service
-# For testing, you can use a fake SMTP service like Ethereal: https://ethereal.email/create
-SMTP_HOST=smtp.ethereal.email
+# SMTP configuration for Gmail
+SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USERNAME=reyes35@ethereal.email
-SMTP_PASSWORD=jtxtG5RH6WhgMmbuEw
-EMAIL_FROM=mahfujalam77452@gmail.com
+SMTP_USERNAME=sksendmail10@gmail.com
+SMTP_PASSWORD=jxsz yqtv lgse rmro
+EMAIL_FROM=sksendmail10@gmail.com
+EMAIL_FROM_NAME="AUST CMS"
 
 # Google OAuth
 # You can get the client ID and secret from the Google Developers Console: https://console.developers.google.com/
@@ -45,7 +45,7 @@ SSLC_IS_LIVE=false
 # payment amount
 PAYMENT_AMOUNT=100
 # PAYMENT CLIENT URL
-PAYMENT_CLIENT_URL=http://localhost:5173
+PAYMENT_CLIENT_URL=http://localhost:5174
 
 # Cloudinary
 CLOUDINARY_CLOUD_NAME=dasrfkex1
