--- a/admin/package.json
+++ b/admin/package.json
@@ -1,13 +1,14 @@
 {
   "name": "admin",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "clean": "rm -rf node_modules package-lock.json"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -32,14 +33,12 @@
     "easymde": "^2.18.0",
     "firebase": "^10.13.2",
     "formik": "^2.4.6",
-    "jest": "^29.7.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.445.0",
     "mantine-datatable": "^7.12.4",
     "nouislider-react": "^3.4.2",
-    "npm-check-updates": "^17.1.2",
     "react": "^18.3.1",
     "react-18-image-lightbox": "^5.1.4",
     "react-apexcharts": "^1.4.1",
@@ -50,6 +49,7 @@
     "react-dom": "^18.3.1",
     "react-export-table-to-excel": "^1.0.6",
     "react-flatpickr": "^3.10.13",
+    "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "react-images-uploading": "^3.1.7",
     "react-input-mask": "^2.0.4",
@@ -62,7 +62,7 @@
     "react-simplemde-editor": "^5.2.0",
     "react-sortablejs": "^6.1.4",
     "react-text-mask": "^5.5.0",
-    "react-toastify": "^10.0.5",
+    "react-toastify": "^10.0.6",
     "redux-persist": "^6.0.0",
     "sortablejs": "^1.15.3",
     "styled-components": "^6.1.13",
@@ -74,12 +74,12 @@
   },
   "devDependencies": {
     "@headlessui/react": "^2.1.8",
-    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.15",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.36.1",
     "eslint-plugin-react-hooks": "^4.6.2",
@@ -87,14 +87,15 @@
     "i18next": "^23.15.1",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.1",
-    "postcss": "^8.4.47",
+    "postcss": "^8.5.3",
     "react-animate-height": "^3.2.3",
     "react-i18next": "^15.0.2",
     "react-perfect-scrollbar": "^1.5.8",
-    "tailwindcss": "^3.4.12",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss": "^3.4.1",
     "vite": "^5.4.7"
   },
   "engines": {
-    "node": ">=18.x"
+    "node": ">=18.0.0"
   }
 }
