--- a/admin/.env
+++ b/admin/.env
@@ -1,2 +1,2 @@
 VITE_FIREBASE_API_KEY=AIzaSyBOupSQRfg9D_gyRk2d2NVPHZ9uB6znqHY
-VITE_API_BASE=http://localhost:3000/v1
+VITE_API_BASE=https://backend350.vercel.app/v1
