--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
 VITE_FIREBASE_API_KEY=AIzaSyBOupSQRfg9D_gyRk2d2NVPHZ9uB6znqHY
-VITE_API_BASE=http://localhost:3000/v1
+VITE_API_BASE=https://backend350.vercel.app/v1
 VITE_GOOGLE_CLIENT_ID=1034675800809-c8nrbpbldm9d7sjtobv4bm7hkd18k8jn.apps.googleusercontent.com
-VITE_BACKEND_URL=http://localhost:3000
+VITE_BACKEND_URL=https://backend350.vercel.app
